[project]
name = "subtitles"
version = "0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "glom>=25.12.0",
  "marimo>=0.23.5",
  "openai>=2.36.0",
  "pysubs2>=1.8.1",
  "python-dotenv>=1.2.2",
  "stable-ts[fw]>=2.19.1",
  "torch==2.10.0",
  "torchaudio==2.10.0",
  "torchvision",
  "typer>=0.25.1",
  "yt-dlp[default]>=2026.3.17",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
yt-dlp = { git = "https://github.com/yt-dlp/yt-dlp/" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 90
# indent-width = 2
# ^ marimo unfriendly
