[project]
name = "subtitles"
version = "0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "benepar>=0.2.0",
  "en-core-web-md",
  "flash-attn",
  "funasr>=1.3.14",
  "glom>=25.12.0",
  "marimo>=0.23.5",
  "openai>=2.36.0",
  "plotly>=6.8.0",
  "polars>=1.41.2",
  "polars-ds[plot]>=0.12.0",
  "pysubs2>=1.8.1",
  "python-dotenv>=1.2.2",
  "qwen-asr>=0.0.6",
  "spacy>=3.8.14",
  "stable-ts[fw]>=2.19.1",
  "torch==2.10.0",
  "torchaudio==2.10.0",
  "torchvision",
  "transformers<5", # build_inputs_with_special_tokens removed
  "typer>=0.25.1",
  "yt-dlp[default]>=2026.3.17",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
yt-dlp = { git = "https://github.com/yt-dlp/yt-dlp/" }
en-core-web-md = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl" }
flash-attn = { url = "https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.9.28/flash_attn-2.8.3+cu130torch2.10-cp312-cp312-win_amd64.whl" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 90
# indent-width = 2
# ^ marimo unfriendly

[dependency-groups]
dev = [
  "altair",
  "duckdb>=1.5.3",
  "mcp>=1",
  "nbformat",
  "polars[pyarrow]>=1.41.2",
  "pydantic>=2",
  "pytest>=9.0.3",
  "python-lsp-ruff>=2.3.1",
  "python-lsp-server>=1.14.0",
  "ruff>=0.15.14",
  "sqlglot>=30.11.0",
  "ty>=0.0.39",
  "vegafusion>=2.0.3",
  "vl-convert-python>=1.9.0.post1",
  "websockets>=16.0",
]
